[package]
name = "esp32s3-parquet-test"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.83"

[[bin]]
name = "esp32s3-parquet-test"
harness = false

[profile.release]
opt-level = "s"
lto = true

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
# Logging
log = { version = "0.4", default-features = false }

# ESP-IDF services (WiFi, HTTP, etc.) - latest stable
esp-idf-svc = { version = "0.51", default-features = false, features = ["std", "binstart"] }

# Error handling
anyhow = "1"

# Embedded service traits
embedded-svc = "0.28"

# Minimal Parquet - no arrow, with Snappy compression (pure Rust)
# Using 56.x for latest stable with snap feature
parquet = { version = "56", default-features = false, features = ["snap"] }

# Sans-IO S3 client - may still be needed for DuckLake S3 operations
rusty-s3 = "0.8"

[build-dependencies]
embuild = "0.33"

# Patch arrow-buffer to add Xtensa architecture support
# The arrow-buffer crate doesn't support Xtensa (ESP32-S3) by default
# We use a git submodule with a patched version that includes Xtensa support
[patch.crates-io]
arrow-buffer = { path = "vendor/arrow-rs/arrow-buffer" }
